# ffmpeg

./: 0源码使用说明0.txt  README.md  fuzhou.srt  plum.ass  test.264
chapter01/: helloc.c  helloffmpeg.c  helloffmpeg.cpp  hellofull.c
chapter02/: codec.c  filter.c  look.c  para.c  read.c  write.c
chapter03/: concat_video.txt  copyfile.c  fps.c  mergeaudio.c  mergevideo.c  mux264.c  peelaudio.c  recode.c  recode2.c  splitvideo.c  timebase.c  timestamp.c
chapter04/: concat_image.txt  image2video.c  savebmp.c  savegif.c  savejpg.c  savejpg_sws.c  savepng.c  saveyuv.c  writeyuv.c
chapter05/: concat_audio.txt  joinaudio.c  pcm2aac.c  pcm2mp3.c  saveaac.c  savemp3.c  savepcm.c  savewav.c  swrmp3.c
chapter06/: audiofilter.c  filmfilter.c  pngfilter.c  videofilter.c
chapter07/: giffilter.c  widgetfilter.c
chapter08/: convertmeta.c  dict.c  freetype2.pc  readmeta.c  vf_sideblur.c  vf_vvflip.c  writemeta.c
chapter09/: background.c  blendvideo.c  mixaudio.c  mixaudio2.c  mixgrid.c  mixvideo.c  page.c  page.h  unifyfilter.c  vf_xfade.c
chapter10/: playaudio.c  playaudio2.c  playsync.c  playsync.cpp  playsync2.c  playvideo.c  playvideo2.c  pullvideo.c  pushvideo.c  sdlmutex.c  sdlnocond.c  sdlnolock.c  sdlsignal.c  sdlthread.c
chapter11/: 第11章Qt工程源码的导入说明.docx
chapter11/audio/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  sdlplayer.cpp  sdlplayer.h  sinkplayer.cpp  sinkplayer.h
chapter11/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
chapter11/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
chapter11/file/: fuzhous.aac
chapter11/hello/: CMakeLists.txt  mainwindow.cpp
chapter11/lame/lib/: libmp3lame.la  mp3lame.lib
chapter11/player/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  openglview.cpp  openglview.h  openglview.ui  videoplayer.cpp  videoplayer.h
chapter11/player/util/: FunctionTransfer.cpp  FunctionTransfer.h  VideoFrame.cpp  VideoFrame.h  videocallback.h
chapter11/sdl2/include/: SDL_config.h  SDL_revision.h
chapter11/sdl2/lib/: SDL2.lib
chapter11/sdl2/lib/pkgconfig/: sdl2.pc
chapter11/simple/: CMakeLists.txt  mainwindow.cpp
chapter11/video/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  videodecoder.cpp  videodecoder.h  videoview.cpp  videoview.h
chapter11/video/util/: videocallback.cpp
chapter11/x264/lib/: libx264.lib
chapter11/x264/lib/pkgconfig/: x264.pc
chapter12/: config_ffmpeg.sh  config_ffmpeg_full.sh  config_ffmpeg_lame.sh  config_freetype.sh  config_lame.sh  config_x264.sh  第12章App工程源码的导入说明.docx
chapter12/FFmpeg/: settings.gradle
chapter12/FFmpeg/app/: build.gradle
chapter12/FFmpeg/app/src/androidTest/java/com/example/ffmpeg/: ExampleInstrumentedTest.java
chapter12/FFmpeg/app/src/main/: AndroidManifest.xml
chapter12/FFmpeg/app/src/main/cpp/: CMakeLists.txt  ffmpeg.cpp
chapter12/FFmpeg/app/src/main/java/com/example/ffmpeg/: MainActivity.java
chapter12/FFmpeg/app/src/main/res/layout/: activity_main.xml
chapter12/FFmpeg/app/src/main/res/values/: strings.xml
chapter12/FFmpeg/app/src/test/java/com/example/ffmpeg/: ExampleUnitTest.java
chapter12/FFmpeg/audio/: build.gradle
chapter12/FFmpeg/audio/src/main/: AndroidManifest.xml
chapter12/FFmpeg/audio/src/main/cpp/: audio.cpp  opensl.cpp
chapter12/FFmpeg/audio/src/main/cpp/include/: common.h  opensl.h
chapter12/FFmpeg/audio/src/main/java/com/example/audio/: MainActivity.java  OpenSLActivity.java  TrackActivity.java
chapter12/FFmpeg/audio/src/main/res/layout/: activity_main.xml  activity_opensl.xml  activity_track.xml
chapter12/FFmpeg/audio/src/main/res/values-night/: themes.xml
chapter12/FFmpeg/gradle/wrapper/: gradle-wrapper.properties
chapter12/FFmpeg/jianying/: build.gradle
chapter12/FFmpeg/jianying/src/androidTest/java/com/example/jianying/: ExampleInstrumentedTest.java
chapter12/FFmpeg/jianying/src/main/: AndroidManifest.xml
chapter12/FFmpeg/jianying/src/main/cpp/: CMakeLists.txt  jianying.cpp
chapter12/FFmpeg/jianying/src/main/cpp/include/libavutil/: avutil.h  timestamp.h
chapter12/FFmpeg/jianying/src/main/java/com/example/jianying/: MainActivity.java  PlayerActivity.java
chapter12/FFmpeg/jianying/src/main/res/layout/: activity_main.xml  activity_player.xml
chapter12/FFmpeg/jianying/src/main/res/values/: strings.xml
chapter12/FFmpeg/jianying/src/test/java/com/example/jianying/: ExampleUnitTest.java
chapter12/FFmpeg/video/: build.gradle
chapter12/FFmpeg/video/src/main/: AndroidManifest.xml
chapter12/FFmpeg/video/src/main/cpp/: opengl.c  video.cpp
chapter12/FFmpeg/video/src/main/cpp/include/: common.h  opengl.h
chapter12/FFmpeg/video/src/main/cpp/include/libavutil/: avutil.h  timestamp.h
chapter12/FFmpeg/video/src/main/java/com/example/video/: MainActivity.java  NativeActivity.java  OpenGLActivity.java
chapter12/FFmpeg/video/src/main/res/layout/: activity_main.xml  activity_native.xml  activity_opengl.xml
chapter12/FFmpeg/video/src/main/res/values/: themes.xml
chapter12/FFmpeg2/: settings.gradle
chapter12/FFmpeg2/app/: build.gradle
chapter12/FFmpeg2/exoplayer/: build.gradle
chapter12/FFmpeg2/exoplayer/src/androidTest/java/com/example/exoplayer/: ExampleInstrumentedTest.java
chapter12/FFmpeg2/exoplayer/src/main/: AndroidManifest.xml
chapter12/FFmpeg2/exoplayer/src/main/java/com/example/exoplayer/: ExoPlayerActivity.java  MainActivity.java  (+1 more)
chapter12/FFmpeg2/exoplayer/src/main/res/layout/: activity_exo_player.xml  activity_main.xml  activity_video_edit.xml
chapter12/FFmpeg2/exoplayer/src/main/res/values/: strings.xml
chapter12/FFmpeg2/gradle/: libs.versions.toml
chapter12/FFmpeg2/gradle/wrapper/: gradle-wrapper.properties
chapter12/FFmpeg2/player/: build.gradle
chapter12/FFmpeg2/player/src/main/: AndroidManifest.xml
chapter12/FFmpeg2/player/src/main/res/layout/: activity_ad_player.xml  activity_list_player.xml  activity_main.xml  activity_simple_player.xml
file/: fuzhou.ass  plum.lrc  plum.srt
(+21 files in other folders)
